--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
     
     <div class="d-flex align-items-center justify-content-center mb-4" style="gap: 16px;">
       <img 
-        src="C:\Users\surya\OneDrive\ONE DRIVE\Desktop\Eval Guru\Base.png" 
+        src="Base.png" 
         alt="Sample" 
         style="border-radius:8px; width:104px; height:104px; object-fit:cover;"
         class="img-fluid flex-shrink-0"
